syntax = "proto3";

package pb;

option go_package = "carier/pkg/grpc/pb";
import "google/protobuf/timestamp.proto";

//The AirlineCompany service definition.
service AirlineCompany {
 rpc CreateAirlineCompany (CreateAirlineCompanyRequest) returns (CreateAirlineCompanyReply);
 rpc DeleteAirlineCompany (DeleteAirlineCompanyRequest) returns (DeleteAirlineCompanyReply);
 rpc GetAirlineCompany    (GetAirlineCompanyRequest   ) returns (GetAirlineCompanyReply   );
 rpc ListAirlineCompany   (ListAirlineCompanyRequest  ) returns (ListAirlineCompanyReply  );
}

message CreateAirlineCompanyRequest {
  int64 company_ID = 1;
  string company_name = 2;
  string iata_code = 3;
  google.protobuf.Timestamp created_at = 4;
//    string mainAirport = 4;
}

message CreateAirlineCompanyReply {
  int64 company_ID = 1;
}

message DeleteAirlineCompanyRequest {
  int64 company_ID = 1;
}

message DeleteAirlineCompanyReply {
  int64 company_ID = 1;
}

message GetAirlineCompanyRequest {
  int64 company_ID = 1;
}

message GetAirlineCompanyReply {
  int64 company_ID = 1;
  string company_name = 2;
  string iata_code = 3;
  google.protobuf.Timestamp created_at = 4;
//    string mainAirport = 4;
}

message ListAirlineCompanyRequest {}

message ListAirlineCompanyReply {
  repeated AirlineCompanyPrams airline_ompany = 1;
}

message AirlineCompanyPrams {
    int64 company_ID = 1;
    string company_name = 2;
    string iata_code = 3;
    google.protobuf.Timestamp created_at = 4;
//    string mainAirport = 4;
}
/*
//The Carier service definition.
service Carier {
 rpc CreateAirlineCompany (CreateAirlineCompanyRequest) returns (CreateAirlineCompanyReply);
 rpc DeleteAirlineCompany (DeleteAirlineCompanyRequest) returns (DeleteAirlineCompanyReply);
 rpc GetAirlineCompany    (GetAirlineCompanyRequest   ) returns (GetAirlineCompanyReply   );
 rpc ListAirlineCompany   (ListAirlineCompanyRequest  ) returns (ListAirlineCompanyReply  );
}
message CreateAirlineCompanyRequest {}
message CreateAirlineCompanyReply {}
message DeleteAirlineCompanyRequest {}
message DeleteAirlineCompanyReply {}
message GetAirlineCompanyRequest {}
message GetAirlineCompanyReply {}
message ListAirlineCompanyRequest {}
message ListAirlineCompanyReply {}
*/